# episodic

./: INSTALL.md  LICENSE  README.md  episodic.py  example_config.txt  pyproject.toml  requirements.txt  setup.py
