[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "episodic"
version = "1.0.0"
description = "TV Series File Renamer"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
requires-python = ">=3.7"
dependencies = [
    "click>=8.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
keywords = ["tv", "series", "rename", "imdb", "episodes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.scripts]
episodic = "episodic:main"

[project.urls]
Homepage = "https://github.com/br3nd4nt/episodic"
Repository = "https://github.com/br3nd4nt/episodic.git"
Issues = "https://github.com/br3nd4nt/episodic/issues"
